--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Gopalakrishnan Adhikesevaboopathy's Portfolio</title>
+</head>
+<body>
+<h1>Resume</h1>
+<h2>Gopalakrishnan Adhikesevaboopathy</h2>
+<p>gopalboopathy@gmail.com</p>
+<p>mobile: 9677099802</p>
+<hr/>
+<h2>Experience Summary</h2>
+<ul>
+<li>I am a Creative Design Professional with more than fifteen years of collective experience, that includes Web, Native iOS, Android, Accessibility and in printing and publishing.</li>
+<li>Manage and lead the project team which includes Business Analyst, designing team, development team, and quality testing team. Able to quickly define and redefine workflows to ensure project timelines are met and quality ensured.</li>
+<li>Adhere to Project management tools (Jira & GitLab) and tracking systems to manage all aspects of project progress. Conduct daily stand-up calls with internal and client stakeholders.</li>
+<li>Worked in small, large, and internationally distributed agile teams. I strive to utilize cognitive and social behaviors to better understand the human mind, its functions, and its effects in each experience.</li>
+<li>My process is deeply rooted in empathy, research, and the user, allowing for objective understandings which help guide design decisions that both support and enhance the user’s daily lives.</li>
+<li>Proficiency in leading contextual inquiry and usability testing. Designing User Interfaces; understanding a user scenario, while designing a user flow; prolific; ability to manage multiple projects; creation of high-quality concept graphics</li>
+<li>Designing with Accessibility and testing (WCAG 2.0 and 508 Compliance) Services covering accessible PDF, MS Office, text alternatives, web accessibility for customers in the U.S, Canada, and the U.K.</li>
+<li>Quick grasp of new ideas and concepts, and to develop innovative and creative solutions to problems. Strong analytical and communication skills, team-oriented, ability to work under deadline pressure.</li>
+</ul>
+<h2>Educational Qualifications</h2>
+<p>Bachelor of Science (Visual Communication)<br>
+Annamalai University, Chidambaram.</p>
+<p>Diploma in Printing Technology <br>
+Institute of Printing Technology, Chennai 600113.</p>
+<p>Diploma in Website Multimedia (Adobe Certified Training Center)<br>
+(Adobe Photoshop, Flash, HTML, JavaScript, Dream weaver, FrontPage, and Fireworks)<br>
+Digiscape Gallery, Chennai 600034.</p>   
+<p>Diploma in Desktop Publishing<br>
+(Adobe PageMaker, CorelDraw, QuarkXPress, Adobe Illustrator, and MS Office)<br>
+Madras Computer Center, Chennai 600015.</p>
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 
-<!-- TODO 4: Add titles/subtitles etc. -->
 
-<!-- TODO 5: Add a link to the project pages -->
 
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+</body>
+</html>
