--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 <body>
 <h1>Resume</h1>
 <h2>Gopalakrishnan Adhikesevaboopathy</h2>
-<p>gopalboopathy@gmail.com</p>
-<p>mobile: 9677099802</p>
+<!--<p>email: gopalboopathy@gmail.com</p> !-->
+<p>Mobile: +91 9677099802</p>
+<p>Mail to: <a href="mailto:gopalboopathy@gmail.com"> gopalboopathy@gmail.com</a></p>
+<p>LinkedIn:  <a href="www.linkedin.com/gopalboopathy"> www.linkedin.com/gopalboopathy</a></p>
+<p>Portfolio Website:  <a href="https://gopalakrishnanadhikesevaboopathy.github.io/Gopal-Portfolios/">Gopal-Portfolios</a></p>
 <hr/>
 <h2>Experience Summary</h2>
 <ul>
@@ -32,9 +35,265 @@ Digiscape Gallery, Chennai 600034.</p>
 <p>Diploma in Desktop Publishing<br>
 (Adobe PageMaker, CorelDraw, QuarkXPress, Adobe Illustrator, and MS Office)<br>
 Madras Computer Center, Chennai 600015.</p>
+<h2>Technical Expertise and Tools</h2>
+<ul>
+    <li> Adobe Creative Cloud</li>
+    <li>QuarkXPress</li>
+    <li>Jira and Confluence</li> 
+    <li>Microsoft Office</li>
+    <li>iBooks Author </li>
+    <li>GitLab </li>
+    <li>AxeDev Tools</li>
+    <li>Sketch</li>
+     <li>User Research</li>
+    <li>Figma</li> 
+    <li>Stackholder’s Interview </li>
+    <li>Axure RP</li>
+    <li>Persona Creation</li> 
+    <li>InVision</li>
+    <li>Business Goals</li>
+    <li>User Zoom (Usability)</li>
+    <li>Heuristic Evaluation</li>
+    <li>Deque University (Accessibility)</li>
+    <li>Competitor Analysis</li>
+    <li>User-centered design (UCD) / visual design</li>
+    <li>product design</li>
+    <li>prototyping</li>
+    <li>drafting agile stories and design specifications</li>
+    <li>design system development</li>
+    <li>mobile app design for iOS and Android</li>
+    <li>web design</li>
+    <li>concept development</li>
+    <li>corporate identity</li>
+    <li>typography</li>
+    <li>printing and Publishing</li>
+    <li>Accessibility Design Standards</li>
+    <li>Human Interface Guidelines</li>
+    <li>Material Design</li>
+</ul>
+<h2>Certifications</h2>
+<ul> 
+<li>How To Design for Accessibility: for UX Designers (WCAG 2.2) – Udemy</li>
+<li> Sketch from A to Z (2020): Become an app designer – Udemy</li>
+<li>Learn Figma - UI/UX Design Essential Training – Udemy</li>
+<li>International Association of Accessibility Professionals* - Member</li>
+</ul>
+<h2>Employment History</h2>
+<p>Date: From May 2013 To till date<br>
+Name of Company: Infinite Computer Solutions Ltd<br>
+Designation: Senior Project Lead </p>
+<p>Date: From January 2012 to May 2013<br>
+Name of Company: Jouve India (TexTech) Ltd., Chennai<br>
+Designation: Senior Technical Lead<br></p>
+<p>Date: From December 2008 to January 2012<br>
+Name of Company: OKS Prepress service Pvt. Ltd., Chennai (Alden)<br>
+Designation:  Technical Analyst<br></p>
+    
+
+<h2>PROJECTS WORKED IN INFINITE</h2>
+<h3>Project 1</h3>
+<p>Project Name: ScheduleFM<br>
+Project Detail: A unique or complex scheduling needs by providing flexible functionality to manage scheduling of facilities and other assets, indoors or out, stationary or mobile. The unique scheduling needs of educational facilities, including K-12<br>
+Project Duration: August 2023 to till now<br>
+Client / Customer: GraphicVision / ScheduleFM<br>
+Details of skills used:  UI/UX / Adobe Creative Cloud / Figma / Accessibility Standards<br>
+Team Size:   5 Members<br>
+Role: Lead UI/UX Project Lead<br></p>
+<p>Responsibility</p>
+<ul>
+<li>Discussion with Product owners for the needs and create design document.</li>
+<li>Conducting heuristic evaluations to catch common usability issues and identifying design problems in a user interface.</li>
+<li>Creating user persona document to understand user needs.</li>
+<li>Consulting with product and technical leads to understanding constraints, limitations, and ability to challenge boundaries.</li>
+<li> UX Design Reviews</li>
+<li>Maintaining Accessibility Design Standards for Web with
+WCAG design guidelines.</li>
+<li>Designing and Prototyping</li>
+<li>Collaborated with the development and implementation
+teams for UI Design.</li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+</ul>
+
+</p>
 
 
+Project 2
+Project Name Project Duration
+Client / Customer Project detail
+Details of skills used
+Team Size
+Role
+Enterprise Order Management July 2022 to August 2023 Brightspeed
+Lead, Quote, Order, Contract – Creation and Management web App for Enterprise
+UI/UX and Accessibility
+Adobe Creative Cloud / Figma
+15-20 Members Lead UI/UX Designer
+Resume
+                 Responsibility
+    • Discussion with stakeholders/product owners for the needs and create design document.
+• Creating user persona document to understand user needs.
+• Consulting with product and technical leads to understanding constraints, limitations, and ability to challenge boundaries.
+• UX Design Reviews
+• Maintaining Accessibility Design Standards for Web
+• Designing and Prototyping
+  Project 3
+Project Name Project Duration
+Client / Customer Project detail
+Details of skills used
+Team Size
+Role
+Service Delivery UI – Order & Task Management July 2022 to August 2023
+Brightspeed
+Service Delivery Application for Service Technician and Task Workers
+UI/UX and Accessibility
+Adobe Creative Cloud / Figma
+15-20 Members Lead UI/UX Designer
+                  Responsibility
+   • Discussion with stakeholders/product owners for the needs and create design document.
+• Creating user persona document to understand user needs.
+• Consulting with product and technical leads to understanding constraints, limitations, and ability to challenge boundaries.
+• UX Design Reviews
+• Maintaining Accessibility Design Standards for Web
+  
 
+     Project 4
+Project Name Project Duration
+Client / Customer Project detail
+Details of skills used
+Team Size Role
+• Designing and Prototyping
+Insight 2.0 and Physical Records Management Mar 2020 to June 2022
+Iron Mountain
+         Records Management (Asset creation including Physical assets)
+UI/UX and Accessibility
+Adobe Creative Cloud / Figma / Sketch / Axure RP 15-20 Members
+Lead UI/UX Designer
+and management
+         Responsibility
+   • Monitor and report the overall progress and effectively manage people utilization; take corrective action/steps whenever necessary and handle a team of 3-5 UI/UX Designers.
+• Discussion with Stakeholders/Product owners for the needs and create design document.
+• Performing User Research throughout the product development cycle.
+• Creating user persona document to understand user needs.
+• Experience in User Interviews, Quantitative and Qualitative observation techniques.
+• Providing expert guidance on User Experience to Creative Design.
+• Consulting with product and technical leads to understanding constraints, limitations, and ability to challenge boundaries.
+• Creating Wire frame design for Android and iOS (Web and Mobile).
+ Project 5
+Project Name Project Duration
+Client / Customer Project detail
+Details of skills used
+Secure Keep Plus, Asset Tracking and Secure Base IM Customer Facing Mobile Applications
+Jan 2019 to Mar 2020
+Iron Mountain
+Warehouse application for scanning and Audit of Digital and Physical assets and Records (Box and Files)
+           • •
+Axure RP
+Adobe Creative Cloud / Sketch / Figma
+   Human Resource- Confidential
+Infinite Computer Solutions India Pvt. Ltd. Page 5 of 8
+
+Resume
+   Team Size Role
+10-15 Members Lead UI/UX Designer
+     Responsibility
+   • Monitor and report the overall progress and effectively manage people utilization; take corrective action/steps whenever necessary and handle a team of 3-5 UI/UX Designers.
+• Discussion with Stakeholders for the needs and create design document.
+• Performing User Research throughout the product development cycle.
+• Creating user persona document to understand user needs.
+• Experience in User Interviews, Quantitative and Qualitative
+observation techniques.
+• Providing expert guidance on User Experience to Creative
+Design.
+• Consulting with product and technical leads to
+understanding constraints, limitations, and ability to challenge boundaries.
+ Project 6
+Project Name Project Duration
+Client / Customer Project detail
+Details of skills used
+Team Size Role
+CoA Global and VAL, VZ Kids and VZ Mats Mar 2017 to Dec 2018
+Verizon
+Tech support and Technician application for assign job and view status of the jobs/tickets
+Adobe Creative Cloud
+Axure RP
+5-10 members UI Designer
+                  Responsibility
+   • Create Visuals and work with stack holders for a better user experience.
+• Generating UI interface with Responsive web design.
+• Guiding the team for the best output.
+• Sanity testing on the design basis.
+ PRIOR EXPERIENCE OUTSIDE INFINITE
+Company worked for: Jouve India (TexTech) Ltd., Chennai
+Duration /Designation: January 2012 to May 2013/ Senior Technical Lead Project Details
+    Project Name Project Duration
+Client / Customer Project detail
+Book Design and Publishing
+Jan 2012 to May 2013
+Hachette Book Group, Penguin US and Harper Collins
+Wireless Generation, Amplify Education and Pearson Education Image Processing, Template creation and Book Design
+         Human Resource- Confidential Infinite Computer Solutions India Pvt. Ltd. Page 6 of 8
+
+Resume
+   Details of skills used
+Team Size Role
+Adobe InDesign
+Adobe Acrobat-pitstop professional IBooks Author
+10-15 members
+Senior Tech Lead
+       Responsibility
+   • Creation of new Samples, preparing workflows, analyzing automation feasibilities, defining time effort estimate, writing documentations, training and transition to the respective production team
+• Working closely with QMS team for customer complaint analysis and providing detailed analysis report for preventive actions / training
+• New eBooks/iBooks (epub 2/3 and epdf / Augmented PDF’s/Accessibility checking) creation and technology transitions to the production team through proper documentation and check list
+• Problem solving for Mac and Mac based applications
+• Works closely with client / CSR for technical related
+question and new pilot project
+• Conducting technical tests and interviews during
+recruitment
+• Identify the areas of strength and weakness for the existing
+staff within the team and organize cross training to improve
+their skill sets in different areas
+• Monthly discussion with the team to share the knowledge to
+all and discussed about that month achievements, concerns and plan to improve the area of lacking
+ Company worked for: OKS Prepress service Pvt. Ltd., Chennai (Alden), Chennai Duration /Designation: December 2008 to January 2012/ Technical Analyst
+Project Details:
+Project Name Project Duration
+Client / Customer Project detail
+Team Size Role
+Book Design and Publishing
+December 2008 to January 2012
+Infinitas Learning, Sheridan Books Incorp., The Sheridan Press Spanish Publishing Group, History Press and Open University, Image Processing, Template creation and Book Design and Print ready PDF Preparation
+20-25 members Technical Analyst
+          Details of skills used
+    Adobe InDesign
+Adobe Acrobat-pitstop professional iBooks Author
+QuarkXpress
+Adobe Photoshop
+     Responsibility
+    • Creation of new Samples, Pilot Projects and Job analyzing
+• Define New workflow for new customers/new Projects
+• Problem solving for Mac and Mac based applications
+• Training the team to updates the technology up to date
+• Conducting technical tests and interviews during recruitment
+• Working as a Project Manager for Sheridan Press
+• Preflight Team for additional responsibility
+• Production track records for invoice and quality
+DETAILS OF TRAINING UNDERGONE
+SL. TRAINED ON NO.
+1 Accessibility Training in Deque University
+PERIOD
+June 2020
+
+<h2>Personal Information</h2>
+ADDRESS: Infinite Computer Solutions (India) Ltd. Plot No. 157, <br>
+EPIP Zone, 2nd Phase, Kundalahalli,<br>
+Bangalore 560066<br>
+DATE OF BIRTH: 05th June 1982<br>
+MARITAL STATUS: Married<br>
+NATIONALITY: Indian</p>
 
 
 
